--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,16 @@
 spring:
+    mail:
+        host: smtp.gmail.com
+        port: 587
+        username: ${mail.username}
+        password: ${mail.password}
+        properties:
+            mail:
+                smtp:
+                    auth: true
+                    timeout: 5000
+                    starttls:
+                    enable: true
     jpa:
         hibernate:
             ddl-auto: none
